Font awesome icons

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,2 +1,12 @@
-
-{{ partial "seo.html" . }}
+<head>
+    {{ partial "seo.html" . }}
+  
+    <link rel="stylesheet" href="/css/style.css">
+  
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      crossorigin="anonymous"
+    >
+  </head>
