--- a/layouts/szolgaltatasok/list.html
+++ b/layouts/szolgaltatasok/list.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
 
+<i class="fa-solid fa-house"></i>
+
 <!-- BEVEZETŐ -->
 <div class="container pt-10 pb-6">
   <div class="row">
