--- a/layouts/partials/service-card.html
+++ b/layouts/partials/service-card.html
@@ -1,25 +1,23 @@
-<div class="col-12 col-md-6 mb-4">
-  <div class="card p-4 h-100 service-card">
+<div class="card p-4 h-100 service-card d-flex flex-column">
 
-    {{ with .Params.icon }}
-      <div class="service-icon mb-3">
-        <i class="fa-solid {{ . }}"></i>
-      </div>
-    {{ end }}
+  {{ with .Params.icon }}
+    <div class="service-icon mb-3">
+      <i class="fa-solid {{ . }}"></i>
+    </div>
+  {{ end }}
 
-    <h2 class="h4 mb-2">
-      <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-    </h2>
+  <h2 class="h4 mb-2">
+    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+  </h2>
 
-    {{ with .Params.summary }}
-      <p class="mb-3">{{ . }}</p>
-    {{ else }}
-      <p class="mb-3">{{ .Summary }}</p>
-    {{ end }}
+  {{ with .Params.summary }}
+    <p class="mb-3">{{ . }}</p>
+  {{ else }}
+    <p class="mb-3">{{ .Summary }}</p>
+  {{ end }}
 
-    <a href="{{ .RelPermalink }}" class="btn btn-primary mt-auto">
-      {{ with .Params.cta }}{{ . }}{{ else }}Részletek{{ end }}
-    </a>
+  <a href="{{ .RelPermalink }}" class="btn btn-primary mt-auto">
+    {{ with .Params.cta }}{{ . }}{{ else }}Részletek{{ end }}
+  </a>
 
-  </div>
 </div>
