--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,7 @@
 {{ define "header_css" }}
   {{ if eq .Section "szolgaltatasok" }}
     {{ partial "service-jsonld.html" . }}
+    {{ partial "faq-schema.html" . }}
   {{ end }}
 {{ end }}
 
