--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,6 +8,10 @@
 // Libraries
 @import 'libraries/hamburgers/hamburgers';
 
+// Base
+@import "base/colors";
+@import "base/buttons";
+
 // Components
 @import 'components/reset';
 @import 'components/page';
@@ -17,6 +21,7 @@
 @import 'components/logo';
 @import 'components/main-menu';
 @import 'components/main-menu-mobile';
+@import 'components/navigation';
 @import 'components/social';
 @import 'components/hamburger';
 @import 'components/buttons';
@@ -28,6 +33,8 @@
 @import 'components/feature';
 @import 'components/hero-image';
 @import 'components/bg';
+@import "components/service-card";
+@import "layout/hero";
 
 // Pages
 @import 'pages/services/page-services-list';
@@ -35,28 +42,3 @@
 @import 'pages/services/service-summary';
 @import 'pages/work/work-summary';
 @import 'pages/work/page-work-single';
-
-// Display breakpoints for DEV
-// body:after {
-//   color: #000000;
-//   font-size: 12px;
-//   padding: 5px;
-//   font-weight: bold;
-//   right: 10px;
-//   position: fixed;
-//   text-align: center;
-//   text-transform: uppercase;
-//   bottom: 10px;
-//   width: 200px;
-//   z-index: 9999;
-//   border: solid 1px #000000;
-//   @each $name, $value in $grid-breakpoints {
-//     @include media-breakpoint-up($name) {
-//       content: "#{$name} - min-width: #{$value}";
-//     }
-//   }
-// }
-
-/* Custom */
-@import "custom";
-@import "components/service-card";
