--- a/layouts/szolgaltatasok/list.html
+++ b/layouts/szolgaltatasok/list.html
@@ -1,16 +1,22 @@
 {{ define "main" }}
 
-<i class="fa-solid fa-house"></i>
+<section class="hero hero-services">
+  <div class="hero-inner text-center">
 
-<!-- BEVEZETŐ -->
-<div class="container pt-10 pb-6">
-  <div class="row">
-    <div class="col-12 text-center">
-      <h1 class="title-1 black">{{ .Title }}</h1>
-      {{ .Content }}
-    </div>
+    <h1 class="hero-title">
+      Szolgáltatások Piliscsabán és környékén
+    </h1>
+
+    <p class="hero-subtitle">
+      Kültéri és beltéri munkák – megbízható kivitelezés, korrekt árakon
+    </p>
+
+    <a href="/contact/" class="btn-hero">
+      Ajánlatot kérek
+    </a>
+
   </div>
-</div>
+</section>
 
 <!-- SZOLGÁLTATÁS KÁRTYÁK -->
 <div class="container pb-6">
