Main page design

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -36,6 +36,7 @@
 @import 'components/bg';
 @import "components/service-card";
 @import "layout/hero";
+@import "layout/home";
 
 // Pages
 @import 'pages/services/page-services-list';
