--- a/layouts/index.html
+++ b/layouts/index.html
@@ -79,6 +79,29 @@
   
     </div>
   </section>
+
+  <section class="usp">
+    <div class="container">
+      <div class="usp-grid">
+        <div class="usp-item">
+          <i class="fa-solid fa-check"></i>
+          <h3>Megbízható kivitelezés</h3>
+          <p>Határidőre, sumákolás nélkül.</p>
+        </div>
   
+        <div class="usp-item">
+          <i class="fa-solid fa-hammer"></i>
+          <h3>Tapasztalat</h3>
+          <p>Nem tegnap kezdtük a szakmát.</p>
+        </div>
+  
+        <div class="usp-item">
+          <i class="fa-solid fa-phone"></i>
+          <h3>Elérhető vagyok</h3>
+          <p>Felveszem a rohadt telefont.</p>
+        </div>
+      </div>
+    </div>
+  </section>  
 
 {{ end }}
