--- a/assets/scss/base/_colors.scss
+++ b/assets/scss/base/_colors.scss
@@ -1,5 +1,5 @@
 :root {
-  --color-primary: #6f8f5f; // EZ AZ EGYETLEN ZÖLD, BAZMEG
+  --color-primary: #6f8f5f;
   --color-primary-dark: #5e7c50;
 
   --color-accent: #f5d76e;
