--- a/layouts/partials/service-card.html
+++ b/layouts/partials/service-card.html
@@ -16,12 +16,10 @@
     </a>
   </h2>
 
-  {{ with .Params.summary }}
-    <p class="mb-3" itemprop="description">{{ . }}</p>
-  {{ else }}
-    <p class="mb-3" itemprop="description">{{ .Summary }}</p>
-  {{ end }}
-
+  <p class="mb-3 service-excerpt" itemprop="description">
+    {{ .Params.description }}
+  </p>
+  
   <a
     href="{{ .RelPermalink }}"
     class="btn btn-primary"
