Fix the list and service design

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -22,18 +22,9 @@
 @import 'components/logo';
 @import 'components/main-menu';
 @import 'components/main-menu-mobile';
+@import 'components/list';
+@import 'components/single';
 @import 'components/navigation';
-@import 'components/social';
-@import 'components/hamburger';
-@import 'components/buttons';
-@import 'components/title';
-@import 'components/content';
-@import 'components/intro';
-@import 'components/strip';
-@import 'components/whitebox';
-@import 'components/feature';
-@import 'components/hero-image';
-@import 'components/bg';
 @import "components/service-card";
 @import "layout/hero";
 @import "layout/home";
