--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -27,6 +27,7 @@
 @import 'components/navigation';
 @import "components/service-card";
 @import "components/service";
+@import "components/gallery";
 
 // Layouts
 @import "layout/hero";
