--- a/layouts/szolgaltatasok/single.html
+++ b/layouts/szolgaltatasok/single.html
@@ -23,6 +23,40 @@
           {{ .Content }}
         </article>
 
+        <section class="service-gallery">
+
+          <h3>Referenciák</h3>
+        
+          <div class="gallery-grid">
+            <img src="https://picsum.photos/id/1018/800/600" alt="Kertépítés referencia">
+            <img src="https://picsum.photos/id/1025/800/600" alt="Kertrendezés referencia">
+            <img src="https://picsum.photos/id/1039/800/600" alt="Tereprendezés">
+            <img src="https://picsum.photos/id/1043/800/600" alt="Kerti utak">
+            <img src="https://picsum.photos/id/1050/800/600" alt="Kert átalakítás">
+            <img src="https://picsum.photos/id/1062/800/600" alt="Pergola építés">
+          </div>
+        
+        </section>
+        
+        
+        <section class="before-after">
+        
+          <h3>Előtte / Utána</h3>
+        
+          <div class="before-after-grid">
+            <figure>
+              <img src="https://picsum.photos/id/1074/800/600" alt="Kert előtte">
+              <figcaption>Előtte</figcaption>
+            </figure>
+        
+            <figure>
+              <img src="https://picsum.photos/id/1084/800/600" alt="Kert utána">
+              <figcaption>Utána</figcaption>
+            </figure>
+          </div>
+        
+        </section>        
+
       </div>
     </div>
   </div>
