--- a/layouts/index.html
+++ b/layouts/index.html
@@ -45,7 +45,7 @@
         <div class="usp-item">
           <i class="fa-solid fa-check"></i>
           <h3>Megbízható kivitelezés</h3>
-          <p>Határidőre, sumákolás nélkül.</p>
+          <p>Mintha magamnak csinálnám.</p>
         </div>
   
         <div class="usp-item">
@@ -57,7 +57,7 @@
         <div class="usp-item">
           <i class="fa-solid fa-phone"></i>
           <h3>Elérhető vagyok</h3>
-          <p>Felveszem a rohadt telefont.</p>
+          <p>Munkaidőben felveszem a telefont.</p>
         </div>
       </div>
     </div>
