--- a/assets/scss/components/_list.scss
+++ b/assets/scss/components/_list.scss
@@ -49,4 +49,34 @@
     font-size: 0.95rem;
     color: var(--color-text-main);
   }
+
+  .services-quality {
+    padding: 3rem 0;
+    background-color: #f7f8f9;
+  
+    .services-quality-inner {
+      max-width: 760px;
+      margin: 0 auto;
+      padding-left: 1.5rem;
+      border-left: 4px solid #e0e0e0;
+  
+      h2 {
+        margin-bottom: 1.25rem;
+        font-weight: 600;
+        color: #222;
+      }
+  
+      p {
+        margin-bottom: 1rem;
+        line-height: 1.65;
+        color: #444;
+  
+        strong {
+          color: #111;
+          font-weight: 600;
+        }
+      }
+    }
+  }
+  
   
