Some other stuff

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<section class="hero">
+<section class="hero hero-home">
   <div class="container hero-inner text-center">
 
     <h1 class="hero-title">
