--- a/assets/scss/layout/_hero.scss
+++ b/assets/scss/layout/_hero.scss
@@ -1,8 +1,7 @@
 .hero {
   position: relative;
 
-  // HEADER ABSOLUTE MIATT TÖBB HELY FELÜL
-  padding: 180px 0 110px;
+  padding: 180px 0 3rem;
 
   background: linear-gradient(
     135deg,
@@ -15,6 +14,23 @@
   .hero-inner {
     max-width: 820px;
     margin: 0 auto;
+
+    .hero-home {
+      background-image:
+        linear-gradient(
+          rgba(0,0,0,0.45),
+          rgba(0,0,0,0.45)
+        ),
+        url("/images/hero/kertrendezes-piliscsaba.jpg");
+      background-size: cover;
+      background-position: center;
+      color: #fff;
+    
+      .hero-title,
+      .hero-subtitle {
+        color: #fff;
+      }
+    }    
   }
 
   .hero-title {
