--- a/assets/scss/layout/_home.scss
+++ b/assets/scss/layout/_home.scss
@@ -87,6 +87,12 @@
     }
   }
 
+  .services-intro {
+    background-color: #f7f8f9;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+  }
+
   @media (max-width: 900px) {
     .services-teaser .services-grid {
       grid-template-columns: 1fr;
@@ -165,3 +171,13 @@
     }
   }
   
+  /* Hamburger csak mobilon */
+@media (min-width: 992px) {
+  #toggle-main-menu-mobile {
+    display: none;
+  }
+
+  #main-menu-mobile {
+    display: none;
+  }
+}
