--- a/layouts/partials/sub-footer.html
+++ b/layouts/partials/sub-footer.html
@@ -13,7 +13,7 @@
                 {{ end }}
             </ul>
             <ul>
-              <li class="zerostatic"><a href="https://www.zerostatic.io">www.lófaszweb.hu</a></li>
+              <li class="zerostatic"><a href="https://www.egyszeruweblap.hu">www.egyszeruweblap.hu</a></li>
             </ul>
           </div>
         </div>
