--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,6 +14,9 @@
             <li><a href="/">Főoldal</a></li>
             <li><a href="/contact/">Kapcsolat</a></li>
             <li class="copyright">© {{ now.Year }} Pilis környéki szolgáltatások</li>
+            <li class="copyright">
+              Készítette: <a href="https://www.egyszeruweblap.hu">Egyszerű Weblap</a>
+            </li>
           </ul>
         </div>
       </div>
